# dap-mux-rs

./: Cargo.toml  README.md
src/: cli.rs  client.rs  compat.rs  lib.rs  main.rs  mux.rs  protocol.rs  seq.rs  upstream.rs
src/tui/: app.rs  log_buffer.rs  mod.rs  terminal.rs
tests/: adapter_spawn.rs  multiplexing.rs  operator_control.rs  operator_tui.rs  runtime.rs  stdio_frontend.rs
tests/common/: mod.rs
