[package]
name = "dap-mux"
version = "0.1.0"
edition = "2024"
description = "A language-agnostic DAP multiplexer: one upstream debug adapter, many downstream clients."

[[bin]]
name = "dap-mux"
path = "src/main.rs"

[lib]
name = "dap_mux"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "io-std", "macros", "sync", "time", "signal", "process", "fs"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
shlex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
ratatui = { version = "0.29" }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = { version = "0.3" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time", "test-util", "process"] }
